PRoblemmet er løst den 8.04.16

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,18 @@
     <string name="title_activity_qr_code_scanner">QrCodeScanner</string>
     <string name="title_activity_barcode_scanner">BarcodeScanner</string>
     <string name="title_activity_mine_billetter">MineBilletter</string>
+
+    <string-array name="ledigeplasser">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+    </string-array>
+    <string name="title_activity_billett">Billett</string>
 </resources>
