--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="title_activity_billett">Billett</string>
     <string name="title_activity_forestillinger">Forestillinger</string>
     <string name="title_activity_forestilling">Forestilling</string>
+    <string name="title_activity_betaling">Betaling</string>
 </resources>
